--- a/newsites/index.html
+++ b/newsites/index.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body>
-        <h1>hello cousera</h1>
+        <h1>hello cousera this is a great course</h1>
 
     </body>
 </html>
